# typo

./: .gitignore  TODO  typo.cabal
app/: Main.hs  Typo.hs
app/Data/Metric/: Levenshtein.hs
app/Data/String/: Metric.hs
bench/: Benchmark.hs
misc/git/: pre-commit
src/: Typo.hs
src/Data/: Argmax.hs
src/Data/String/: Metric.hs
src/System/IO/: Class.hs
test/: Spec.hs
