name:                typo
version:             0.1.0
synopsis:            ..
description:         ...
homepage:            https://github.com/neosimsim/typo
license:             BSD3
license-file:        LICENSE
author:              Alexander Ben Nasrallah
maintainer:          me@abn.sh
-- copyright:
category:            Misc
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type:              git
  location:          https://github.com/neosimsim/typo

flag develop
  description: Enable warnings and treat them as error.
  default:     False
  manual:      True

library
  exposed-modules:
                   Typo,
                   Data.Argmax,
                   Data.String.Metric,
                   System.IO.Class
  -- other-modules:       Data.Argmax
  -- other-extensions:
  build-depends:       base == 4.*, directory == 1.3.*, containers == 0.6.*, filepath == 1.4.*, mtl == 2.2.*, process == 1.6.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  if flag(develop)
    ghc-options: -Wall -Werror -Wno-type-defaults

executable typo
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base == 4.*, typo
  hs-source-dirs:      app
  default-language:    Haskell2010
  if flag(develop)
    ghc-options: -Wall -Werror -Wno-type-defaults

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base == 4.*, typo, QuickCheck, mtl == 2.2.*, containers == 0.6.*
  if flag(develop)
    ghc-options: -Wall -Werror -Wno-type-defaults
