name:               typo
version:            0.1.0
synopsis:           Command line wrapper suggesting file paths
description:
  Command line wrapper suggesting file paths.
  > usage: typo cmd args...
  @typo@ leaves the first argument as it is and interpretes it as the command to run.
  The other arguments interpreted as file paths. `typo` processed the file system to find best matches.
  Example:
  > $ typo ls srd/data
  > did you mean: ls ["app/Data"]
  > y
  > Argmax.hs  String

homepage:           https://github.com/neosimsim/typo
license:            BSD3
license-file:       LICENSE
author:             Alexander Ben Nasrallah
maintainer:         me@abn.sh
category:           Misc
build-type:         Simple
extra-source-files: CHANGELOG.md
cabal-version:      >=1.10

source-repository head
  type:     git
  location: https://github.com/neosimsim/typo

flag develop
  description: Enable warnings and treat them as error.
  default:     False
  manual:      True

executable typo
  main-is:          Main.hs
  other-modules:
    Data.Argmax
    Data.String.Metric
    System.IO.Class
    Typo

  build-depends:
      base        >=4   && <5
    , containers  >=0.6 && <0.7
    , directory   >=1.3 && <1.4
    , filepath    >=1.4 && <1.5
    , mtl         >=2.2 && <2.3
    , process     >=1.6 && <1.7

  hs-source-dirs:   app
  default-language: Haskell2010

  if flag(develop)
    ghc-options: -Wall -Werror -Wno-type-defaults

test-suite tests
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test app
  other-modules:
    Data.Argmax
    Data.String.Metric
    System.IO.Class
    Typo

  default-language: Haskell2010
  build-depends:
      base        >=4   && <5
    , containers  >=0.6 && <0.7
    , directory   >=1.3 && <1.4
    , filepath    >=1.4 && <1.5
    , HUnit
    , mtl         >=2.2 && <2.3
    , process     >=1.6 && <1.7
    , QuickCheck

  if flag(develop)
    ghc-options: -Wall -Werror -Wno-type-defaults

benchmark benchmarks
  type:             exitcode-stdio-1.0
  main-is:          Benchmark.hs
  hs-source-dirs:   bench app
  other-modules:    Data.String.Metric
  default-language: Haskell2010
  build-depends:
      base        >=4   && <5
    , containers  >=0.6 && <0.7
    , criterion
    , directory   >=1.3 && <1.4
    , filepath    >=1.4 && <1.5
    , HUnit
    , mtl         >=2.2 && <2.3
    , process     >=1.6 && <1.7

  if flag(develop)
    ghc-options: -Wall -Werror -Wno-type-defaults -rtsopts=all
